--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -1,15 +1,68 @@
-# Test compose - DO NOT COMMIT
 services:
   postgres:
     image: postgres:16-alpine
     environment:
-      - POSTGRES_PASSWORD=testpass123
-      - POSTGRES_DB=testdb
+      POSTGRES_PASSWORD: testpass
+      POSTGRES_DB: testdb
     networks:
       - test-net
-    ports:
-      - "5433:5432"
+    healthcheck:
+      test: pg_isready -U postgres
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
+  minio:
+    image: minio/minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    networks:
+      - test-net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
+  createbucket:
+    image: minio/mc
+    depends_on:
+      minio:
+        condition: service_healthy
+    entrypoint: >
+      /bin/sh -c "
+      mc alias set myminio http://minio:9000 minioadmin minioadmin;
+      mc mb myminio/test-bucket || true;
+      exit 0;
+      "
+    networks:
+      - test-net
+
+  # Override backup service from docker-compose.yaml
+  backup:
+    depends_on:
+      postgres:
+        condition: service_healthy
+      createbucket:
+        condition: service_completed_successfully
+    environment:
+      PGHOST: postgres
+      PGPORT: "5432"
+      PGUSER: postgres
+      PGPASSWORD: testpass
+      PGDATABASE: testdb
+      RESTIC_REPOSITORY: s3:http://minio:9000/test-bucket
+      RESTIC_PASSWORD: testpassword
+      AWS_ACCESS_KEY_ID: minioadmin
+      AWS_SECRET_ACCESS_KEY: minioadmin
+      SHORT_CRON: "0 * * * *"
+      LONG_CRON: "0 3 * * *"
+    networks:
+      test-net:
+      coolify-network:
 
 networks:
   test-net:
-    name: test-backup-net
+  coolify-network:
